# bingus

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  readme.txt
examples/: 0_hello.cpp  1_sprites.cpp  2_text.cpp  3_gui.cpp  4_input.cpp  5_collision.cpp  6_boids.cpp  boids.cpp  gui.cpp  hello_window.cpp  input.cpp  sprites.cpp  text.cpp
include/: bingus.h  glad.h
include/LivePP/API/x64/: LPP_API_Preferences.h  LPP_API_Version_x64_CPP.h  release_notes_x64_CPP.txt  version_x64_CPP.txt
include/LivePP/Docs/x64/: documentation.html
lib/: glfw3.lib
res/shaders/: shape.frag  sprite.frag  sprite_vertcolor.frag  text.frag  text_vertcolor.frag  ui.vert  ui_shape.vert  ui_vertcolor.vert  world.vert  world_shape.vert  world_vertcolor.vert
src/: bingus.cpp  bingus.h  collision.cpp  debug.cpp  entity.cpp  glad.c  gui.cpp  input.cpp  math.cpp  renderer.cpp  resource.cpp  shader.cpp  texture.cpp  ui.cpp  util.cpp  window.cpp
